Improved mobile layout: 1. Fixed label positions for all languages 2. Added bottom margins to sections 3. Unified media query breakpoints to 770px 4. Adjusted line positions for better alignment

--- a/src/components/Activities.module.css
+++ b/src/components/Activities.module.css
@@ -5,6 +5,7 @@
 
 .activitiesSection {
   margin-top: 200px;
+  margin-bottom: 100px;
   height:auto;
   width: calc(100vw - 145px);
   background: #f5c15116;
@@ -154,19 +155,31 @@ html[data-language='ro'] .label {
   }
 
   .label {
-    left: -45px;
-    top: 40px;
+    left: -53px;
+    top: 37px;
     width: 60px;
   }
 
   .label span {
     font-size: 20px;
-    left: -30px;
+    left: -20px;
+  }
+
+  /* Portuguese specific adjustments for mobile */
+  html[data-language='pt'] .label {
+    left: -60px;
+    top: 47px;
+  }
+
+  /* Romanian specific adjustments for mobile */
+  html[data-language='ro'] .label {
+    left: -53px;
+    top: 37px;
   }
 
   .line {
     left: -22px;
-    top: 120px;
+    top: 140px;
   }
 }
 
