--- a/src/components/Objectives.module.css
+++ b/src/components/Objectives.module.css
@@ -130,7 +130,7 @@
   }
 
   /* Mobile styles */
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 770px) {
     .objectivesSection {
       width: calc(100vw - 60px);
       margin-left: 40px;
@@ -158,19 +158,31 @@
     }
 
     .label {
-      left: -45px;
-      top: 30px;
+      left: -60px;
+      top: 45px;
       width: 60px;
     }
 
     .label span {
       font-size: 20px;
-      left: -22px;
+      left: -20px;
+    }
+
+    /* Portuguese specific adjustments for mobile */
+    html[data-language='pt'] .label {
+      left: -55px;
+      top: 40px;
+    }
+
+    /* Romanian specific adjustments for mobile */
+    html[data-language='ro'] .label {
+      left: -55px;
+      top: 40px;
     }
 
     .line {
-      left: -20px;
-      top: 100px;
+      left: -22px;
+      top: 140px;
     }
   }
 
