--- a/src/components/TargetGroups.module.css
+++ b/src/components/TargetGroups.module.css
@@ -129,7 +129,7 @@
   }
   
   /* Mobile styles */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 770px) {
   .targetGroupsSection {
     width: calc(100vw - 60px);
     margin-left: 40px;
@@ -157,19 +157,31 @@
   }
 
   .label {
-    left: -45px;
-    top: 45px;
+    left: -83px;
+    top: 68px;
     width: 60px;
   }
 
   .label span {
     font-size: 20px;
-    left: -43px;
+    left: -20px;
+  }
+
+  /* Portuguese specific adjustments for mobile */
+  html[data-language='pt'] .label {
+    left: -70px;
+    top: 55px;
+  }
+
+  /* Romanian specific adjustments for mobile */
+  html[data-language='ro'] .label {
+    left: -75px;
+    top: 60px;
   }
 
   .line {
-    left: -25px;
-    top: 140px;
+    left: -20px;
+    top: 170px;
   }
 }
 
